[tool.poetry]
name = "sagent"
version = "0.1.0"
description = ""
authors = ["Kirill Zhosul <79853674+kirillzhosul@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
